增加ptz控制指令
// todo 待测试

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -67,3 +67,9 @@ target_link_libraries(gb28181_cpp
         ssl crypto resolv yaml  
         zltoolkit
         ${CONAN_LIBS})
+
+
+add_executable(
+        ptzcmd
+        test/ptz_test.cpp
+)
